# truetype-vs-postscript-transformer

./: .gitignore  README.md  pyproject.toml  run.sh
.devcontainer/: Dockerfile
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
notebook/: dataloader.ipynb  loss.ipynb  metrics.ipynb  scheduler.ipynb  test_qcurveto.ipynb  torchfont.ipynb
